cabal-version: 3.0
name:          mo-nomz
version:       6.0
maintainer:    Dan Fithian
copyright:     2021 Dan Fithian
build-type:    Simple
extra-source-files:
    test/fixtures/banana-bread-rachelmansfield.txt
    test/fixtures/chicken-pot-pie-allrecipes.txt
    test/fixtures/chicken-pot-pie-pillsbury.txt
    test/fixtures/chicken-pot-pie-tasteofhome.txt
    test/fixtures/roast-chicken-food-network.txt

common options
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  build-depends:
      aeson
    , aeson-pretty
    , attoparsec
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , case-insensitive
    , cereal
    , classy-prelude
    , containers
    , cryptonite
    , data-default
    , ekg-core
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , memory
    , monad-logger
    , mtl
    , network-uri
    , postgresql-simple
    , postgresql-simple-migration
    , random
    , resource-pool
    , scalpel
    , servant
    , servant-server
    , text
    , time
    , unordered-containers
    , wai
    , wai-app-static
    , wai-extra
    , warp
    , yaml
  default-language: Haskell2010

common ghc-options
  ghc-options: -Wall -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O0

common ghc-exe-options
  ghc-options: -Wall -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O2

library
  import: options, ghc-options
  exposed-modules:
      API.Types
      Application
      Auth
      Cache
      CI.Orphans
      Combinable
      Conversion
      Database
      Foundation
      Json
      Parser
      Scrape
      Scraper.Internal.Site
      Scraper.Internal.Types
      Serialize.Orphans
      Servant
      Server
      Settings
      Types
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      src

executable mo-nomz
  import: options, ghc-exe-options
  main-is: main.hs
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      app
  build-depends:
      mo-nomz

test-suite tests
  import: options, ghc-options
  type: exitcode-stdio-1.0
  main-is: main.hs
  other-modules:
      CacheSpec
      ConversionSpec
      DatabaseSpec
      Gen
      ParsedIngredients
      ParserSpec
      ScrapeSpec
      ServerSpec
      TestEnv
      Paths_mo_nomz
  hs-source-dirs:
      test
  build-depends:
      QuickCheck
    , file-embed
    , file-path-th
    , hspec
    , mo-nomz
