cabal-version: 3.0
name:          mo-nomz
version:       8.2.1
maintainer:    Dan Fithian
copyright:     2021 Dan Fithian
build-type:    Simple

common options
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  default-language: Haskell2010

common ghc-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O0

common ghc-exe-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O2

library
  import: options, ghc-options
  exposed-modules:
      API.Types
      Application
      Auth
      Combinable
      Conversion
      Database
      Foundation
      NomzPrelude
      Postgres.Orphans
      Scraper.Site
      Serialize.Orphans
      Servant
      Server
      Settings
      Types
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , bytestring
    , case-insensitive
    , cereal
    , chez-grater
    , containers
    , cryptonite
    , data-default
    , exceptions
    , http-client
    , http-client-tls
    , http-types
    , memory
    , monad-logger
    , mtl
    , network-uri
    , postgresql-simple
    , postgresql-simple-migration
    , random
    , resource-pool
    , scalpel
    , servant
    , servant-server
    , tagged
    , text
    , time
    , transformers
    , unordered-containers
    , wai
    , wai-app-static
    , wai-enforce-https
    , wai-extra
    , warp
    , yaml

executable mo-nomz
  import: options, ghc-exe-options
  main-is: main.hs
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      app
  build-depends:
      base
    , mo-nomz

test-suite tests
  import: options, ghc-options
  type: exitcode-stdio-1.0
  main-is: main.hs
  other-modules:
      ConversionSpec
      DatabaseSpec
      ServerSpec
      SiteSpec
      TestEnv
      Paths_mo_nomz
  hs-source-dirs:
      test
  build-depends:
      base
    , case-insensitive
    , cereal
    , chez-grater
    , containers
    , http-client
    , hspec
    , mo-nomz
    , monad-logger
    , mtl
    , network-uri
    , postgresql-simple
    , resource-pool
    , QuickCheck
    , text
    , time
    , transformers
