cabal-version: 3.0
name:          mo-nomz
version:       9.0.0
maintainer:    Dan Fithian
copyright:     2021 Dan Fithian
build-type:    Simple

common options
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  default-language: Haskell2010

common ghc-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O0

common ghc-exe-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O2

library
  import: options, ghc-options
  exposed-modules:
      Application
      Foundation
      Servant
      Settings
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , chez-server
    , data-default
    , exceptions
    , http-types
    , monad-logger
    , mtl
    , servant
    , servant-server
    , tagged
    , text
    , transformers
    , wai
    , wai-app-static
    , wai-enforce-https
    , wai-extra
    , warp
    , yaml

executable mo-nomz
  import: options, ghc-exe-options
  main-is: main.hs
  other-modules:
      Paths_mo_nomz
  hs-source-dirs:
      app
  build-depends:
      base
    , mo-nomz
